update: add folder CRUD operations

--- a/manara/nodejs/expressjs/file-upload/views/index.ejs
+++ b/manara/nodejs/expressjs/file-upload/views/index.ejs
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Hammersmith+One&family=Pacifico&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/index.css">
-    <title>Cloudia</title>
-</head>
-<body>
-    <%- include("partials/feedbackMessage.ejs") %>
-    <div class="title-box">
-            <img src="icons/logo.svg" alt="Cloudia logo">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Hammersmith+One&family=Pacifico&display=swap"
+            rel="stylesheet" />
+        <link rel="stylesheet" href="css/index.css" />
+        <title>Cloudia</title>
+    </head>
+    <body>
+        <%- include("partials/feedbackMessage.ejs") %>
+        <div class="title-box">
+            <img src="icons/logo.svg" alt="Cloudia logo" />
             <h1>Cloudia</h1>
         </div>
         <h3>Simple, fast and free cloud storage</h3>
-    <div class="anchors">
-        <a href="/signup" class="buttonType">SignUp</a>
-        <a href="/login" class="buttonType">LogIn</a>
-    </div>
-</body>
+        <div class="anchors">
+            <a href="/signup" class="buttonType">SignUp</a>
+            <a href="/login" class="buttonType">LogIn</a>
+        </div>
+        <br />
+        <br />
+        <br />
+        <%- include("partials/footer.ejs") %>
+    </body>
 </html>
