--- a/manara/nodejs/expressjs/file-upload/views/file.ejs
+++ b/manara/nodejs/expressjs/file-upload/views/file.ejs
@@ -35,9 +35,10 @@
                 <p>Type: <%= file.fileType %></p>    
                 <p><%= parseFloat(file.size / 1048576).toFixed(2) %> MB</p>
             </div>
-            <div>
-                <a href="/mystorage/download/<%= file.id %>" target="_blank" class="buttonType">Download</a>
-            </div>
+            <form action="/mystorage/download" method="post">
+                <input type="text" name="filePath" value="<%= file.filePath %>" hidden />
+                <input type="submit" class="buttonType" value="Download"/>
+            </form>
         </div>
     </div>
     </div>
