chores: rebranding to Frive 🎉

--- a/manara/nodejs/expressjs/file-upload/views/file.ejs
+++ b/manara/nodejs/expressjs/file-upload/views/file.ejs
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/mystorage.css">
-    <title>Cloudia</title>
+    <title>Frive</title>
 </head>
 <body>
     <header>
         <div>
             <img src="/icons/logo.svg" alt="logo">
-            <h3>Cloudia</h3>
+            <h3>Frive</h3>
         </div>
         <h3 class="user"><%= locals.currentUser.email %> storage</h3>
         <a href="/logout">LogOut</a>
