--- a/manara/nodejs/expressjs/file-upload/views/index.ejs
+++ b/manara/nodejs/expressjs/file-upload/views/index.ejs
@@ -9,13 +9,13 @@
             href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Hammersmith+One&family=Pacifico&display=swap"
             rel="stylesheet" />
         <link rel="stylesheet" href="css/index.css" />
-        <title>Cloudia</title>
+        <title>Frive</title>
     </head>
     <body>
         <%- include("partials/feedbackMessage.ejs") %>
         <div class="title-box">
-            <img src="icons/logo.svg" alt="Cloudia logo" />
-            <h1>Cloudia</h1>
+            <img src="icons/logo.svg" alt="Frive logo" />
+            <h1>Frive</h1>
         </div>
         <h3>Simple, fast and free cloud storage</h3>
         <div class="anchors">
