--- a/manara/nodejs/expressjs/file-upload/views/login.ejs
+++ b/manara/nodejs/expressjs/file-upload/views/login.ejs
@@ -9,11 +9,11 @@
             href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Hammersmith+One&family=Pacifico&display=swap"
             rel="stylesheet" />
         <link rel="stylesheet" href="css/index.css" />
-        <title>Cloudia</title>
+        <title>Frive</title>
     </head>
     <body>
         <%- include("partials/feedbackMessage.ejs") %>
-        <h1>Login on Cloudia</h1>
+        <h1>Login on Frive</h1>
         <%- include("partials/errors.ejs") %>
         <form action="/login" method="post">
             <div>
