--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Hammersmith+One&family=Pacifico&display=swap"
-            rel="stylesheet" />
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="css/index.css" />
         <title>Frive</title>
     </head>
