--- a/views/partials/phoneForms.ejs
+++ b/views/partials/phoneForms.ejs
@@ -21,7 +21,8 @@
             name="foldername"
             id="foldername"
             placeholder="my fancy folder"
-            required />
+            required
+        />
         <input type="submit" value="Create" />
     </form>
 </div>
@@ -33,7 +34,8 @@
         <form
             action="/mystorage/uploadfile/<%= folderId %>"
             method="post"
-            enctype="multipart/form-data">
+            enctype="multipart/form-data"
+        >
             <h3>Upload File</h3>
             <input type="file" name="files" id="files" multiple />
             <input type="submit" value="Upload" id="uploadFiles" />
@@ -99,7 +101,7 @@
         folderContainer.style.display = "none";
     });
 
-    closeBtns.forEach((btn) => {
+    closeBtns.forEach(btn => {
         btn.addEventListener("click", () => {
             btn.parentElement.style.display = "none";
         });
