--- a/views/mystorage.ejs
+++ b/views/mystorage.ejs
@@ -36,10 +36,7 @@
                     </div>
                 </div>
                 <!-- Create folder with his parent folder id as a param -->
-                <form
-                    action="/mystorage/createFolder/<%= folderId %>"
-                    method="post"
-                >
+                <form action="/mystorage/folder/<%= folderId %>" method="post">
                     <h3>Create Folder</h3>
                     <label for="foldername">Folder Name</label>
                     <input
