--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,112 +1,115 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #00749E;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #00749e;
 }
 
 body {
-    width: 100%;
-    height: 100dvh;
+  width: 100%;
+  height: 100dvh;
 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  background-image: url("/bg.webp");
+  background-position: center;
+  background-size: cover;
+
+  .anchors {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    background-image: url('/bg.webp');
-    background-position: center;
-    background-size: cover;
-
-    .anchors{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 2rem;
-        font-size: 1.2rem;
-    }
+    gap: 2rem;
+    font-size: 1.2rem;
+  }
 }
 
-.title-box{
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    align-items: center;
-    width: 100%;
+.title-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: center;
+  width: 100%;
 
-    position: relative;
+  position: relative;
 
-    img{
-        width: 200px;
-    }
+  img {
+    width: 200px;
+  }
 
-    h1{
-        font-family: "Pacifico", cursive;
-        font-weight: 200;
-        font-style: normal;
-        font-size: 4rem;
-        position: absolute;
-        bottom: -80px;
-    }
+  h1 {
+    font-family: "Pacifico", cursive;
+    font-weight: 200;
+    font-style: normal;
+    font-size: 4rem;
+    position: absolute;
+    bottom: -80px;
+  }
 }
 
-h3{
-    margin-top: 5rem;
-    margin-bottom: 1rem;
+h3 {
+  margin-top: 5rem;
+  margin-bottom: 1rem;
 }
 
 form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 1rem;
+  div {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    gap: 1rem;
-    margin-top: 1rem;
-    div{
-        display: flex;
-        flex-direction: column;
-        gap: 0.2rem;
-    }
+    gap: 0.2rem;
+  }
 }
 
-.feedbackBox{
-    position: absolute;
-    bottom: 0;
-    right: 0;
+.feedbackBox {
+  position: absolute;
+  bottom: 0;
+  right: 0;
 
-    background-color: #fafafa;
-    margin: 1rem;
-    padding: 1rem;
-    border-radius: 1rem;
+  background-color: #fafafa;
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: 1rem;
 
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    button{
-        background-color: transparent;
-        border: none;
-        cursor: pointer;
-        align-self: flex-end;
-    }
-
-    p{
-        margin-top: 1rem;
-    }
-}
-
-.buttonType, input[type=submit]{
-    background-color: #00749E;
-    border: none;
-    color: #fafafa;
-    padding: 0.5rem;
-    border-radius: 0.5rem;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-input[type=text], input[type=email], input[type=password]{
-    padding: 0.3rem;
-    border: 3px solid #00749E;
-    border-radius: 0.5rem;
+  button {
     background-color: transparent;
+    border: none;
+    cursor: pointer;
+    align-self: flex-end;
+  }
+
+  p {
+    margin-top: 1rem;
+  }
+}
+
+.buttonType,
+input[type="submit"] {
+  background-color: #00749e;
+  border: none;
+  color: #fafafa;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  padding: 0.3rem;
+  border: 3px solid #00749e;
+  border-radius: 0.5rem;
+  background-color: transparent;
 }
